--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -1,98 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500' rel='stylesheet' type='text/css'>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block head_title %}BIBCAT - BIBFRAME Access and Discovery Catalog{% endblock %}</title>
-    {% block css %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bibcat.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bf_SearchToolbar.css') }}">
-    </style>
-    {% endblock %}
-    {# <script async defer src="//hypothes.is/embed.js"></script> #}
-    {% block more_css %}{% endblock %}
-	<script src="//use.typekit.net/xze8etn.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
-  </head>
-  <body class="container bibcat-background">
-   {% block header %}
-     {% include 'snippets/header.html' %}
-   {% endblock %}
-   {% block body %}
-    <h1>BIBFRAME Search and Display Catalog <small>v</small>{{ version }}</h1>
-    <p>Placeholder Main page</p>
-    <div> 
-      <form method='POST' action='/search'>
-        <select name="search_type">
-          <option>Keyword</option>
-          <option>Work</option> 
-          <option>Instance</option>
-          <option>Organization</option> 
-          <option>HeldItem</option>
-          <option>Place</option> 
-          <option>Topic</option>
-          <option>Person</option> 
-        </select>
-        <input type="text" name="phrase">
-        <input type="submit" value="Run search"></input>
-      </form>
-    </div>
-    <div style="float: left; padding-right: 1em;">
-    <h2>Elastic Search Information</h2>
-    <table style="border: 1px solid black">
-     {% for key, val in search.info().items() %}
-     {% if key == 'version' %}
-      {% for ver_key, ver_val in val.items() %}
-      <tr>
-        <th>{{ ver_key|title }}</th>
-        <td>{{ ver_val }}</td>
-      </tr>
-      {% endfor %}
-     {% else %}
-     <tr>
-       <th>{{ key|title }}</th>
-       <td>{{ val }}</td>
-     </tr>
-     {% endif %}
-     {% endfor %}
-     <tr>
-       <th>Total Resources:</th>
-       <td>{{ search.count().count }}</td>
-     </tr>
-    </table>
-    </div>
-    <div>
-     <h2>Fedora 4 Information</h2>
-    <table style="border: 1px solid black">
-     <tr>
-       <th>Base URL</th>
-       <td>{{ repository.base_url }}</td>
-     </tr>
-     {#
-     {% set repo_info = repository.read(repository.base_url + '/rest') %}
-     {% for p,o in repo_info.predicate_objects() %}
-      <tr>
-        <td>{{ p }}</td>
-        <td>{{ o }}</td>
-      </tr>
-     {% endfor %}
-     #}
-    </table>
-    </div>
-   {% endblock %}
-   {% block footer %}
-      {% include 'snippets/footer.html' %}
-   {% endblock %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sammy.js/0.7.6/sammy.min.js"></script>  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
-  <script src="{{ url_for('static', filename='js/typeahead.bundle.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/bibcat.js') }}"></script>
-  {% block activity %}
-  {% endblock %}
+	<head>
+		<link rel="shortcut icon" href="{{ url_for('static', filename='images/bc-logo-blue.ico') }}">
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,500' rel='stylesheet' type='text/css'>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>{% block head_title %}BIBCAT - BIBFRAME Access and Discovery Catalog{% endblock %}</title>
+		{% block css %}
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/bibcat.css') }}">
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/bf_SearchToolbar.css') }}">
+		{% endblock %}
+
+		{% block more_css %}
+		{% endblock %}
+	</head>
+	<body class="container bibcat-background">
+		{% block header %}
+		 {% include 'snippets/header.html' %}
+		{% endblock %}
+
+		{% block body %}
+		{% endblock %}
+
+		{% block footer %}
+		  {% include 'snippets/footer.html' %}
+		{% endblock %}
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/sammy.js/0.7.6/sammy.min.js"></script>  
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
+		<script src="{{ url_for('static', filename='js/typeahead.bundle.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/bibcat_utilityFunctions.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/bibcat_searchToolbar.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/bibcat_tt.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/bibcat.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/bibcat_main.js') }}"></script>
+	  {% block activity %}
+	  {% endblock %}
   </body>
 </html>
