--- a/catalog/templates/snippets/brief-result.html
+++ b/catalog/templates/snippets/brief-result.html
@@ -1,26 +1,25 @@
-<hr class="bibcat" style="background-color: #4DBAC7;" data-bind="visible: searchResults().length > 0">
-<h3 data-bind="html: resultSummary" class="bibcat-text bibcat"></h3>
+<hr class="bibcat" data-bind="visible: searchResults().length > 0">
 <section class="container" id="scroll-container">
-<ul class="media-list" id="Results" data-bind="foreach: searchResults">
-  <li class="media" itemscope> 
-   <h3 class="media-heading bibcat-title"> 
-     <a class="bibcat-title" data-bind="attr: { 'href': url }">
-     <span data-bind="text: title"></span> / <span data-bind="text: author"></span> 
-     </a>
-   </h3>
-   <div class="media-left">
-     <a href="#" itemscope itemtype="http://bibframe.org/vocab/CoverArt">
-      <img data-bind="attr: { src: cover_url }"  class="media-object" {#src="{{ url_for('static', filename='images/cover-placeholder.png') }}"#} >
-     </a>
-   </div>
-   <article class="media-body" data-bind="foreach: held_items">
-     <h4 class="media-heading bibcat-text">
-       <span data-bind="text: subLocation"></span>
-       <span data-bind="text: shelfMarkLcc"></span>
-       <span data-bind="text: circulationStatus"></span> - 
-       <a class="bibcat-text" onclick="alert('Coming soon!')">Map it</a>
-     </h4>
-   </article> 
-  </li>
-</ul> 
+	<ul class="media-list" id="Results" data-bind="foreach: searchResults">
+		<li class="media" itemscope> 
+			<h3 class="media-heading bibcat-title"> 
+				<a class="bibcat-title" data-bind="attr: { 'href': url }">
+					<span data-bind="text: title"></span> / <span data-bind="text: author"></span> 
+				</a>
+			</h3>
+		<div class="media-left">
+			<a href="#" itemscope itemtype="http://bibframe.org/vocab/CoverArt">
+				<img data-bind="attr: { src: cover_url }"  class="media-object" {#src="{{ url_for('static', filename='images/cover-placeholder.png') }}"#} >
+			</a>
+		</div>
+		<article class="media-body" data-bind="foreach: held_items">
+			<h4 class="media-heading bibcat-text">
+				<span data-bind="text: subLocation"></span>
+				<span data-bind="text: shelfMarkLcc"></span>
+				<span data-bind="text: circulationStatus"></span> - 
+				<a class="bibcat-text" onclick="alert('Coming soon!')">Map it</a>
+			</h4>
+		</article> 
+		</li>
+	</ul> 
 </section>
