--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -1,8 +1,11 @@
+
 <header class="row container">
-  <div class="col-md-4">
-    <a href="http://bibcat.org"><h1 class="bibcat bibcat-title">BIBCAT</h1></a>
-  </div>
-  <div class="col-md-8">
-  </div>
+	<div class='appLogo'><a href="./"><img src="{{ url_for('static', filename='images/bc-logo-blue.png') }}"></img></a></div>
+	<div class='appHeaderLogoSpacer'><img src="{{ url_for('static', filename='images/bc-logo-blue.png') }}"></img></div>
+	<div class="col-md-4">
+		<a href="./"><h1 class="bibcat bibcat-title">BIBCAT</h1></a>
+	</div>
+	<div class="col-md-8">
+	</div>
 </header>
 <hr class="bibcat">
