fixed a few logic bugs for knockout logic

--- a/catalog/static/css/bf_SearchToolbar.css
+++ b/catalog/static/css/bf_SearchToolbar.css
@@ -80,4 +80,6 @@
 .bibcat_resultSummary{
 	color: black !important;
 	border-right: none !important;
+	background-color: white !important;
+	cursor:default !important;
 }
