--- a/catalog/templates/snippets/brief-result.html
+++ b/catalog/templates/snippets/brief-result.html
@@ -24,11 +24,13 @@
 	</ul> 
 </section>
 <div class="viewItem" data-bind="with: chosenItemData">
-	<div class="itemInfo">
-		<h1 data-bind="text: title"></h1>
+	<h1 data-bind="text: _type"></h1>
+	<h1 data-bind="text: _source['bf:label']"></h1>
+	<!--<div class="itemInfo">
+		
 		<p><label>From</label>: <span data-bind="text: from"></span></p>
 		<p><label>To</label>: <span data-bind="text: to"></span></p>
 		<p><label>Date</label>: <span data-bind="text: date"></span></p>
 	</div>
-	<p class="message" data-bind="html: messageContent" />
+	<p class="message" data-bind="html: messageContent" />-->
 </div>
