--- a/catalog/templates/detail.html
+++ b/catalog/templates/detail.html
@@ -15,7 +15,7 @@
 <ul>
  <li><a class="bibcat-text" href="#result">Search Result</a></li>
  <li><a class="bibcat-text" href="#related">Related BIBFRAME Resources</a></li>
- <li><a class="bibcat-text" href="/{{ entity['fedora:uuid'][0] }}.json">JSON-LD</a></li>
+ <li><a class="bibcat-text" href="/{{ entity['_id'] }}.json">JSON-LD</a></li>
 </ul>
 <a name="result"></a>
 <h3 class="bibcat-title">Elastic Search Result</h3>
