--- a/catalog/templates/snippets/brief-result.html
+++ b/catalog/templates/snippets/brief-result.html
@@ -25,7 +25,16 @@
 </section>
 <div class="viewItem" data-bind="with: chosenItemData">
 	<h1 data-bind="text: _type"></h1>
-	<h1 data-bind="text: _source['bf:label']"></h1>
+	<!--<h1 data-bind="text: _source['bf:workTitle']['lookup'][0]['bf:titleValue']"></h1>-->
+	<h2 data-bind="text: 'Related Works'"></h2>
+	<!--<article class="media-body" data-bind="foreach: _z_relatedItems['rel_works']">
+		<h4 class="media-heading bibcat-text">
+			<a data-bind="attr: { href: '#item/'+_type+'/'+_id, title: _source['bf:authorizedAccessPoint']}">
+				<span data-bind="text: _source['bf:workTitle']"></span>
+			</a>
+			<span data-bind="text: _source['bf:authorizedAccessPoint']"></span>
+		</h4>
+	</article> -->
 	<!--<div class="itemInfo">
 		
 		<p><label>From</label>: <span data-bind="text: from"></span></p>
