--- a/catalog/templates/login.html
+++ b/catalog/templates/login.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
-  {%include 'snippets/basic-search.html' %}
-  {%include 'snippets/brief-result.html' %}
-
+<h1>Login</h1>
+<form action="" method="post">
+            <p><input type=text name=username>
+            <p><input type=password name=password>
+            <p><input type=submit value=Login>
+</form>
 {% endblock %}
 
 {% block activity %}
