--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -2,10 +2,24 @@
 <header class="row container">
 	<div class='appLogo'><a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='images/bc-logo-blue.png') }}"></img></a></div>
 	<div class='appHeaderLogoSpacer'><img src="{{ url_for('static', filename='images/bc-logo-blue.png') }}"></img></div>
-	<div class="col-md-4">
+	<div class="col-md-4 bibcatName">
 		<a href="{{ url_for('index') }}"><h1 class="bibcat bibcat-title">BIBCAT</h1></a>
+		<div class="masterMenu">
+		<div class="dropdown" style="position:relative">
+		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+		    MENU
+		    <span class="caret"></span>
+		  </button>
+		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+		    <li><a href="http://104.131.39.41:5601/#" target="_blank">Kibana Link</a></li>
+		    <li><a href="{{ url_for('index') }}/#classcount">Class Counts</a></li>
+		  </ul>
+		</div>
+	</div>
 	</div>
 	<div class="col-md-8">
 	</div>
+
+	
 </header>
 <hr class="bibcat">
