--- a/catalog/templates/snippets/brief-result.html
+++ b/catalog/templates/snippets/brief-result.html
@@ -64,7 +64,7 @@
 		<table>
 			<thead>
 				<tr><th colspan=2><h2>BF Authority Summary</h2></th></tr>
-				<tr><th colspan=2><a href="http://104.131.39.41:5601/#/visualize/edit/Authorities-by-Type?_g=()&_a=(filters:!(),linked:!f,query:(query_string:(analyze_wildcard:!t,query:'*')),vis:(aggs:!((id:'1',params:(),schema:metric,type:count),(id:'2',params:(filters:!((input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Person%22')))),(input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Organization%22')))),(input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Topic%22')))),(input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Place%22')))))),schema:bucket,type:filters)),listeners:(),params:(perPage:10,showMeticsAtAllLevels:!f,showPartialRows:!f),type:table))">View in Kibana</a></th></tr>
+				<tr><th colspan=2><a href="http://104.131.39.41:5601/#/visualize/edit/Authorities-by-Type?_g=()&_a=(filters:!(),linked:!f,query:(query_string:(analyze_wildcard:!t,query:'*')),vis:(aggs:!((id:'1',params:(),schema:metric,type:count),(id:'2',params:(filters:!((input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Person%22')))),(input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Organization%22')))),(input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Topic%22')))),(input:(query:(query_string:(analyze_wildcard:!t,query:'type:%22bf:Place%22')))))),schema:bucket,type:filters)),listeners:(),params:(perPage:10,showMeticsAtAllLevels:!f,showPartialRows:!f),type:table))" target="_blank">View in Kibana</a></th></tr>
 				<tr>
 					<th>BF Types</th><th>Count</th>
 				</tr>
