--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -12,7 +12,7 @@
 		  </button>
 		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
 		    <li><a href="http://104.131.39.41:5601/#" target="_blank">Kibana Link</a></li>
-		    <li><a href="{{ url_for('index') }}/#classcount">Class Counts</a></li>
+		    <li><a href="{{ url_for('index', _external=True) }}#classcount">Class Counts</a></li>
 		  </ul>
 		</div>
 	</div>
